--- a/src/containers/NeedApartAdd/NeedApartAdd.scss
+++ b/src/containers/NeedApartAdd/NeedApartAdd.scss
@@ -37,7 +37,6 @@
       border-radius: 2px !important;
       border: 1px solid $borderColor !important;
       box-shadow: 0 0 0 #fff !important;
-      padding: 0 .06rem !important;
       height: .36rem;
       line-height: .36rem;
       color: $text-color;
@@ -61,6 +60,7 @@ textarea{
     position: absolute;
     right: 0;
     top: 0;
+    margin-top: 10px;
   }
 }
 .baseList:last-child{
