--- a/src/theme/bootstrap.overrides.scss
+++ b/src/theme/bootstrap.overrides.scss
@@ -139,17 +139,19 @@ label{
 //input
 input, select{
   width: 100%;
-  height: .36rem;
-  line-height: .36rem;
-  padding: 0 .06rem;
+  height: .3rem;
+  line-height: .3rem;
+  padding: .02rem 0 !important;
+  box-sizing: content-box;
   border-radius: 2px;
   border: 1px solid $borderColor;
   background: #fff;
   outline: none !important;
+  text-indent: .06rem;
 }
 textarea{
   width: 100%;
-  padding: 0 .06rem;
+  padding: .06rem;
   border-radius: 2px;
   border: 1px solid $borderColor;
   background: #fff;
@@ -172,48 +174,100 @@ textarea{
   }
 }
 //checkbox
-.checkbox {
-  width: .24rem;
-  height: .24rem;
+.checkbox, .radio{
   position: relative;
+  margin: 0;
+  padding: 0;
   input{
-    width: .24rem;
-    height: .24rem;
+    position: absolute;
+    top: 0;
     margin:0;
     right: 0;
   }
+  label{
+    cursor: pointer;
+    position: absolute;
+    box-sizing: content-box;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    left: 0;
+  }
 }
-.checkbox label {
-  cursor: pointer;
-  position: absolute;
+.checkbox {
   width: .24rem;
   height: .24rem;
-  top: 0;
-  left: 0;
-  background: #41C299;
+  input{
+    width: .24rem;
+    height: .24rem;
+  }
+}
+.checkbox label {
+  width: .22rem;
+  height: .22rem;
+  border: 1px solid $mainColor;
+  background: #fff;
+  border-radius: .03rem;
 }
 /*duihao*/
-.checkbox label:after {
+.checkbox label:before, .checkbox label:after, .radio label:after{
   opacity: 0;
   content: '';
   position: absolute;
+}
+.checkbox label:before{
+  width: .22rem;
+  height: .22rem;
+  background: $mainColor;
+  top: .0rem;
+  left: .0rem;
+}
+.checkbox label:after {
   width: .16rem;
   height: .08rem;
-  background: transparent;
-  top: .06rem;
-  left: .04rem;
+  top: .05rem;
+  left: .03rem;
   border: 3px solid #fff;
   border-top: none;
   border-right: none;
-
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
 /*creat checked state style*/
-.checkbox input[type=checkbox]:checked + label:after {
+.checkbox input[type=checkbox]:checked + label:before, .checkbox input[type=radio]:checked + label:after, .checkbox input[type=radio]:checked + label:before, .checkbox input[type=checkbox]:checked + label:after{
+  opacity: 1;
+}
+
+//radio
+.radio {
+  width: .16rem;
+  height: .16rem;
+  position: relative;
+  input{
+    width: .14rem;
+    height: .14rem;
+  }
+}
+.radio label {
+  width: .14rem;
+  height: .14rem;
+  border: 1px solid $mainColor;
+  background: #fff;
+  border-radius: 50%;
+  min-height: inherit;
+}
+/*duihao*/
+.radio label:after {
+  top: 0;
+  left: 0;
+  width: .1rem;
+  height: .1rem;
+  box-sizing: content-box;
+  background: $mainColor;
+  border: .02rem solid #fff;
+  border-radius: 50%;
+}
+/*creat checked state style*/
+.radio input[type=radio]:checked + label:after, .radio input[type=radio]:checked + label:after{
   opacity: 1;
 }
 
@@ -443,6 +497,9 @@ textarea{
     vertical-align: top;
     padding-top: .08rem;
     position: relative;
+  }
+  .DayPicker-Day:active{
+    background: #f2f2f2;
   }
 
   .DayPicker--interactionDisabled .DayPicker-Day {
