--- a/src/components/Login-Register/Login-Register.scss
+++ b/src/components/Login-Register/Login-Register.scss
@@ -19,7 +19,8 @@
     input {
       width: 100%;
       height: .35rem;
-      padding-left: .45rem;
+      box-sizing: border-box;
+      padding-left: .45rem !important;
       border: 0;
       border-bottom: 2px solid #fff;
       background: transparent;
