--- a/src/theme/bootstrap.overrides.scss
+++ b/src/theme/bootstrap.overrides.scss
@@ -133,7 +133,7 @@ label{
 }
 
 .mainBtn:active, .cancelBtn:active, .mainXsBtn:active, .delBtn:active{
-  opacity: 0.5;
+  box-shadow: 0 0 30px rgba(0,0,0,0.2) inset;
 }
 
 //input
